# boardjudge-backend

./: .gitignore  Cargo.toml  README.md  build.rs
assets/: bindgen.sh  starter.sql
data/: config.toml
lib/: libjudger.h
src/: lib.rs  utils.rs
src/judger/: mod.rs  run.rs
src/sys/: libjudger.rs  mod.rs
src/sys/schema/: contest.rs  mod.rs  prelude.rs  privilege.rs  problem.rs  record.rs  user.rs
src/web/: mod.rs  prelude.rs
src/web/api/: auth.rs  contest.rs  mod.rs  privilege.rs  problem.rs  record.rs  submit.rs  testdata.rs  user.rs
