[package]
name = "boardjudge-backend"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.57"
axum = { version = "0.5.6", features = ["multipart"] }
axum-extra = { version = "0.3.3", features = ["cookie"] }
chrono = "0.4.19"
clap = { version = "3.1.18", features = ["derive"] }
dashmap = "5.3.4"
futures = "0.3.21"
ojcmp = "0.4.0"
sea-orm = { version = "0.8.0", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid"
] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
sha2 = "0.10.2"
thiserror = "1.0.31"
tokio = { version = "1.19.0", features = ["full"] }
toml = "0.5.9"
tower = "0.4.12"
tower-cookies = "0.6.0"
tower-http = "0.3.3"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
uuid = { version = "0.8.0", features = ["v4", "serde"] }
